UC-401: Pre-booking flow
- Create Booking: Enable customers to reserve slots with validation rules.
- Price Preview: Auto-calculate estimated fees before booking.
- Auto-Lifecycle: Handle automatic slot reservation and no-shows.
- Manage Booking: Allow slot reassignments and cancellations with refunds.